--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactBootstrapGrid",
+  "name": "react-bootstrap-grid",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
