--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactGrid",
+  "name": "react-bootstrap-grid",
   "version": "0.1.0",
   "authors": [
     "Phil Hughes <me@iamphill.com>"
